--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://codesurfer3022.github.io/battleship/",
   "name": "battleship",
   "version": "1.0.0",
   "description": "",
