Update README files with correct demo

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://codesurfer3022.github.io/battleship/",
+  "homepage": "https://chandraprakash-dev.github.io/battleship/",
   "name": "battleship",
   "version": "1.0.0",
   "description": "",
